--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1110,435 +1110,35 @@ section.lazy-placeholder:after {
 .cid-tWRDlV1cHZ .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-tWRKPFurRe .navbar {
-  padding: .5rem 0;
-  background: #333333;
-  transition: none;
-  min-height: 77px;
-}
-.cid-tWRKPFurRe .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
-}
-.cid-tWRKPFurRe a {
-  font-style: normal;
-}
-.cid-tWRKPFurRe .nav-item span {
-  padding-right: 0.4em;
-  line-height: 0.5em;
-  vertical-align: text-bottom;
-  position: relative;
-  text-decoration: none;
-}
-.cid-tWRKPFurRe .nav-item a {
-  display: -webkit-flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0.7rem 0 !important;
-  margin: 0rem .65rem !important;
-  -webkit-align-items: center;
-  -webkit-justify-content: center;
-}
-.cid-tWRKPFurRe .nav-item:focus,
-.cid-tWRKPFurRe .nav-link:focus {
-  outline: none;
-}
-.cid-tWRKPFurRe .btn {
-  padding: 0.4rem 1.5rem;
-  display: -webkit-inline-flex;
-  align-items: center;
-  -webkit-align-items: center;
-}
-.cid-tWRKPFurRe .btn .mbr-iconfont {
-  font-size: 1.6rem;
-}
-.cid-tWRKPFurRe .menu-logo {
-  margin-right: auto;
-}
-.cid-tWRKPFurRe .menu-logo .navbar-brand {
-  display: flex;
-  margin-left: 5rem;
-  padding: 0;
-  transition: padding .2s;
-  min-height: 3.8rem;
-  -webkit-align-items: center;
-  align-items: center;
-}
-.cid-tWRKPFurRe .menu-logo .navbar-brand .navbar-caption-wrap {
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  word-break: break-word;
-  min-width: 7rem;
-  margin: .3rem 0;
-}
-.cid-tWRKPFurRe .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
-  line-height: 1.2rem !important;
-  padding-right: 2rem;
-}
-.cid-tWRKPFurRe .menu-logo .navbar-brand .navbar-logo {
-  font-size: 4rem;
-  transition: font-size 0.25s;
-}
-.cid-tWRKPFurRe .menu-logo .navbar-brand .navbar-logo img {
-  display: flex;
-}
-.cid-tWRKPFurRe .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
-  transition: font-size 0.25s;
-}
-.cid-tWRKPFurRe .menu-logo .navbar-brand .navbar-logo a {
-  display: inline-flex;
-}
-.cid-tWRKPFurRe .navbar-toggleable-sm .navbar-collapse {
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  padding-right: 5rem;
-  width: auto;
-}
-.cid-tWRKPFurRe .navbar-toggleable-sm .navbar-collapse .navbar-nav {
-  flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-  padding-left: 0;
-}
-.cid-tWRKPFurRe .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
-  -webkit-align-self: center;
-  align-self: center;
-}
-.cid-tWRKPFurRe .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
-  padding-left: 0;
-  padding-bottom: 0;
-}
-.cid-tWRKPFurRe .dropdown .dropdown-menu {
-  background: #333333;
-  visibility: hidden;
-  display: block;
-  position: absolute;
-  min-width: 5rem;
-  padding-top: 1.4rem;
-  padding-bottom: 1.4rem;
-  text-align: left;
-}
-.cid-tWRKPFurRe .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
-}
-.cid-tWRKPFurRe .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-tWRKPFurRe .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-}
-.cid-tWRKPFurRe .dropdown.open > .dropdown-menu {
-  visibility: visible;
-}
-.cid-tWRKPFurRe .navbar-toggleable-sm.opened:after {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  content: '';
-  background-color: rgba(0, 0, 0, 0.1);
-  left: 0;
-  bottom: 0;
-  transform: translateY(100%);
-  -webkit-transform: translateY(100%);
-  z-index: 1000;
-}
-.cid-tWRKPFurRe .navbar.navbar-short {
-  min-height: 60px;
-  transition: all .2s;
-}
-.cid-tWRKPFurRe .navbar.navbar-short .navbar-toggler-right {
-  top: 20px;
-}
-.cid-tWRKPFurRe .navbar.navbar-short .navbar-logo a {
-  font-size: 2.5rem !important;
-  line-height: 2.5rem;
-  transition: font-size 0.25s;
-}
-.cid-tWRKPFurRe .navbar.navbar-short .navbar-logo a .mbr-iconfont {
-  font-size: 2.5rem !important;
-}
-.cid-tWRKPFurRe .navbar.navbar-short .navbar-logo a img {
-  height: 3rem !important;
-}
-.cid-tWRKPFurRe .navbar.navbar-short .navbar-brand {
-  min-height: 3rem;
-}
-.cid-tWRKPFurRe button.navbar-toggler {
-  width: 31px;
-  height: 18px;
-  cursor: pointer;
-  transition: all .2s;
-  top: 1.5rem;
-  right: 1rem;
-}
-.cid-tWRKPFurRe button.navbar-toggler:focus {
-  outline: none;
-}
-.cid-tWRKPFurRe button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: #ffffff;
-}
-.cid-tWRKPFurRe button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  transition: all .2s;
-}
-.cid-tWRKPFurRe button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-tWRKPFurRe button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-tWRKPFurRe button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  transition: all .2s;
-}
-.cid-tWRKPFurRe nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-tWRKPFurRe nav.opened .hamburger span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  transition: all .25s;
-}
-.cid-tWRKPFurRe nav.opened .hamburger span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  transition: all .25s;
-}
-.cid-tWRKPFurRe nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-tWRKPFurRe .collapsed.navbar-expand {
-  flex-direction: column;
-  -webkit-flex-direction: column;
-}
-.cid-tWRKPFurRe .collapsed .btn {
-  display: -webkit-flex;
-}
-.cid-tWRKPFurRe .collapsed .navbar-collapse {
-  display: none !important;
-  padding-right: 0 !important;
-}
-.cid-tWRKPFurRe .collapsed .navbar-collapse.collapsing,
-.cid-tWRKPFurRe .collapsed .navbar-collapse.show {
-  display: block !important;
-}
-.cid-tWRKPFurRe .collapsed .navbar-collapse.collapsing .navbar-nav,
-.cid-tWRKPFurRe .collapsed .navbar-collapse.show .navbar-nav {
-  display: block;
-  text-align: center;
-}
-.cid-tWRKPFurRe .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
-.cid-tWRKPFurRe .collapsed .navbar-collapse.show .navbar-nav .nav-item {
-  clear: both;
-}
-.cid-tWRKPFurRe .collapsed .navbar-collapse.collapsing .navbar-buttons,
-.cid-tWRKPFurRe .collapsed .navbar-collapse.show .navbar-buttons {
-  text-align: center;
-}
-.cid-tWRKPFurRe .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
-.cid-tWRKPFurRe .collapsed .navbar-collapse.show .navbar-buttons:last-child {
-  margin-bottom: 1rem;
-}
-@media (min-width: 1024px) {
-  .cid-tWRKPFurRe .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 3.8rem);
-  }
-}
-.cid-tWRKPFurRe .collapsed button.navbar-toggler {
-  display: block;
-}
-.cid-tWRKPFurRe .collapsed .navbar-brand {
-  margin-left: 1rem !important;
-}
-.cid-tWRKPFurRe .collapsed .navbar-toggleable-sm {
-  flex-direction: column;
-  -webkit-flex-direction: column;
-}
-.cid-tWRKPFurRe .collapsed .dropdown .dropdown-menu {
-  width: 100%;
-  text-align: center;
-  position: relative;
-  opacity: 0;
-  overflow: hidden;
-  display: block;
-  height: 0;
-  visibility: hidden;
-  padding: 0;
-  transition-duration: .5s;
-  transition-property: opacity,padding,height;
-}
-.cid-tWRKPFurRe .collapsed .dropdown.open > .dropdown-menu {
-  position: relative;
-  opacity: 1;
-  height: auto;
-  padding: 1.4rem 0;
-  visibility: visible;
-}
-.cid-tWRKPFurRe .collapsed .dropdown .dropdown-submenu {
-  left: 0;
-  text-align: center;
-  width: 100%;
-}
-.cid-tWRKPFurRe .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
-  margin-top: 0;
-  position: inherit;
-  right: 0;
-  top: 50%;
-  display: inline-block;
-  width: 0;
-  height: 0;
-  margin-left: .3em;
-  vertical-align: middle;
-  content: "";
-  border-top: .30em solid;
-  border-right: .30em solid transparent;
-  border-left: .30em solid transparent;
-}
-@media (max-width: 1023px) {
-  .cid-tWRKPFurRe .navbar-expand {
-    flex-direction: column;
-    -webkit-flex-direction: column;
-  }
-  .cid-tWRKPFurRe img {
-    height: 3.8rem !important;
-  }
-  .cid-tWRKPFurRe .btn {
-    display: -webkit-flex;
-  }
-  .cid-tWRKPFurRe button.navbar-toggler {
-    display: block;
-  }
-  .cid-tWRKPFurRe .navbar-brand {
-    margin-left: 1rem !important;
-  }
-  .cid-tWRKPFurRe .navbar-toggleable-sm {
-    flex-direction: column;
-    -webkit-flex-direction: column;
-  }
-  .cid-tWRKPFurRe .navbar-collapse {
-    display: none !important;
-    padding-right: 0 !important;
-  }
-  .cid-tWRKPFurRe .navbar-collapse.collapsing,
-  .cid-tWRKPFurRe .navbar-collapse.show {
-    display: block !important;
-  }
-  .cid-tWRKPFurRe .navbar-collapse.collapsing .navbar-nav,
-  .cid-tWRKPFurRe .navbar-collapse.show .navbar-nav {
-    display: block;
-    text-align: center;
-  }
-  .cid-tWRKPFurRe .navbar-collapse.collapsing .navbar-nav .nav-item,
-  .cid-tWRKPFurRe .navbar-collapse.show .navbar-nav .nav-item {
-    clear: both;
-  }
-  .cid-tWRKPFurRe .navbar-collapse.collapsing .navbar-buttons,
-  .cid-tWRKPFurRe .navbar-collapse.show .navbar-buttons {
-    text-align: center;
-  }
-  .cid-tWRKPFurRe .navbar-collapse.collapsing .navbar-buttons:last-child,
-  .cid-tWRKPFurRe .navbar-collapse.show .navbar-buttons:last-child {
-    margin-bottom: 1rem;
-  }
-  .cid-tWRKPFurRe .dropdown .dropdown-menu {
-    width: 100%;
-    text-align: center;
-    position: relative;
-    opacity: 0;
-    overflow: hidden;
-    display: block;
-    height: 0;
-    visibility: hidden;
-    padding: 0;
-    transition-duration: .5s;
-    transition-property: opacity,padding,height;
-  }
-  .cid-tWRKPFurRe .dropdown.open > .dropdown-menu {
-    position: relative;
-    opacity: 1;
-    height: auto;
-    padding: 1.4rem 0;
-    visibility: visible;
-  }
-  .cid-tWRKPFurRe .dropdown .dropdown-submenu {
-    left: 0;
-    text-align: center;
-    width: 100%;
-  }
-  .cid-tWRKPFurRe .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
-    margin-top: 0;
-    position: inherit;
-    right: 0;
-    top: 50%;
-    display: inline-block;
-    width: 0;
-    height: 0;
-    margin-left: .3em;
-    vertical-align: middle;
-    content: "";
-    border-top: .30em solid;
-    border-right: .30em solid transparent;
-    border-left: .30em solid transparent;
-  }
-}
-@media (min-width: 767px) {
-  .cid-tWRKPFurRe .menu-logo {
-    flex-shrink: 0;
-    -webkit-flex-shrink: 0;
-  }
-}
-.cid-tWRKPFurRe .navbar-collapse {
-  flex-basis: auto;
-  -webkit-flex-basis: auto;
-}
-.cid-tWRKPFurRe .nav-link:hover,
-.cid-tWRKPFurRe .dropdown-item:hover {
-  color: #c1c1c1 !important;
-}
-.cid-tWRKPG0tVC {
+.cid-tWROBNF0Un {
   background-image: url("../../../assets/images/mbr-1920x1279.jpg");
 }
-.cid-tWRKPGqBLD {
+.cid-tWROCVahyu {
   padding-top: 90px;
   padding-bottom: 90px;
   background-image: url("../../../assets/images/mbr-1920x1113.jpg");
 }
-.cid-tWRKPGqBLD .item {
+.cid-tWROCVahyu .item {
   padding-bottom: 2rem;
 }
-.cid-tWRKPGqBLD .item-wrapper {
+.cid-tWROCVahyu .item-wrapper {
   height: 100%;
 }
-.cid-tWRKPGqBLD .item-wrapper img {
+.cid-tWROCVahyu .item-wrapper img {
   height: 100%;
   object-fit: cover;
 }
-.cid-tWRKPGqBLD .carousel-control,
-.cid-tWRKPGqBLD .close {
+.cid-tWROCVahyu .carousel-control,
+.cid-tWROCVahyu .close {
   background: #1b1b1b;
 }
-.cid-tWRKPGqBLD .carousel-control-prev {
+.cid-tWROCVahyu .carousel-control-prev {
   margin-left: 2.5rem;
 }
-.cid-tWRKPGqBLD .carousel-control-next {
+.cid-tWROCVahyu .carousel-control-next {
   margin-right: 2.5rem;
 }
-.cid-tWRKPGqBLD .close {
+.cid-tWROCVahyu .close {
   position: fixed;
   opacity: 0.5;
   font-size: 35px;
@@ -1560,15 +1160,15 @@ section.lazy-placeholder:after {
   transition: opacity 0.3s ease;
   font-family: 'MobiriseIcons';
 }
-.cid-tWRKPGqBLD .close::before {
+.cid-tWROCVahyu .close::before {
   content: '\e91a';
 }
-.cid-tWRKPGqBLD .close:hover {
+.cid-tWROCVahyu .close:hover {
   opacity: 1;
   background: #000;
   color: #fff;
 }
-.cid-tWRKPGqBLD .carousel-control {
+.cid-tWROCVahyu .carousel-control {
   position: fixed;
   width: 70px;
   height: 70px;
@@ -1586,62 +1186,62 @@ section.lazy-placeholder:after {
   -o-transition: all 0.2s ease-in-out 0s;
   transition: all 0.2s ease-in-out 0s;
 }
-.cid-tWRKPGqBLD .carousel-inner > .active {
+.cid-tWROCVahyu .carousel-inner > .active {
   display: block;
 }
-.cid-tWRKPGqBLD .carousel-control.left {
+.cid-tWROCVahyu .carousel-control.left {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-tWRKPGqBLD .carousel-control.right {
+.cid-tWROCVahyu .carousel-control.right {
   right: 0;
   margin-right: 2.5rem;
 }
-.cid-tWRKPGqBLD .carousel-control .icon-next,
-.cid-tWRKPGqBLD .carousel-control .icon-prev {
+.cid-tWROCVahyu .carousel-control .icon-next,
+.cid-tWROCVahyu .carousel-control .icon-prev {
   margin-top: -18px;
   font-size: 40px;
   line-height: 27px;
 }
-.cid-tWRKPGqBLD .carousel-control:hover {
+.cid-tWROCVahyu .carousel-control:hover {
   background: #1b1b1b;
   color: #fff;
   opacity: 1;
 }
 @media (max-width: 768px) {
-  .cid-tWRKPGqBLD .carousel-control,
-  .cid-tWRKPGqBLD .carousel-indicators,
-  .cid-tWRKPGqBLD .modal .close {
+  .cid-tWROCVahyu .carousel-control,
+  .cid-tWROCVahyu .carousel-indicators,
+  .cid-tWROCVahyu .modal .close {
     position: fixed;
   }
 }
 @media (max-width: 767px) {
-  .cid-tWRKPGqBLD .mbr-slider .carousel-control {
+  .cid-tWROCVahyu .mbr-slider .carousel-control {
     top: auto;
     bottom: 20px;
   }
-  .cid-tWRKPGqBLD .mbr-slider > .container .carousel-control {
+  .cid-tWROCVahyu .mbr-slider > .container .carousel-control {
     margin-bottom: 0;
   }
 }
-.cid-tWRKPGqBLD .carousel-indicators {
+.cid-tWROCVahyu .carousel-indicators {
   bottom: 0;
   margin-bottom: 3px;
 }
 @media (max-width: 991px) {
-  .cid-tWRKPGqBLD .carousel-indicators {
+  .cid-tWROCVahyu .carousel-indicators {
     margin-bottom: 3.625rem !important;
     padding-left: 2.5rem;
     padding-right: 2.5rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-tWRKPGqBLD .carousel-indicators {
+  .cid-tWROCVahyu .carousel-indicators {
     display: none;
   }
 }
-.cid-tWRKPGqBLD .carousel-indicators .active,
-.cid-tWRKPGqBLD .carousel-indicators li {
+.cid-tWROCVahyu .carousel-indicators .active,
+.cid-tWROCVahyu .carousel-indicators li {
   width: 7px;
   height: 7px;
   margin: 3px;
@@ -1649,106 +1249,106 @@ section.lazy-placeholder:after {
   opacity: 0.5;
   border: 4px solid #1b1b1b;
 }
-.cid-tWRKPGqBLD .carousel-indicators .active {
+.cid-tWROCVahyu .carousel-indicators .active {
   background: #fff;
 }
-.cid-tWRKPGqBLD .carousel-indicators li {
+.cid-tWROCVahyu .carousel-indicators li {
   max-width: 15px;
   max-height: 15px;
   border-radius: 50%;
 }
-.cid-tWRKPGqBLD .modal {
+.cid-tWROCVahyu .modal {
   padding-left: 0 !important;
   position: fixed;
   overflow: hidden;
   padding-right: 0 !important;
 }
-.cid-tWRKPGqBLD .modal-dialog {
+.cid-tWROCVahyu .modal-dialog {
   margin: 0 auto;
   max-width: 100%;
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.cid-tWRKPGqBLD .modal-content {
+.cid-tWROCVahyu .modal-content {
   border-radius: 0;
   border: none;
   background: transparent;
 }
-.cid-tWRKPGqBLD .modal-body {
+.cid-tWROCVahyu .modal-body {
   padding: 0;
   display: flex;
   align-items: center;
 }
-.cid-tWRKPGqBLD .modal-body .carousel-item {
+.cid-tWROCVahyu .modal-body .carousel-item {
   top: 50%;
   transform: translateY(-50%);
 }
-.cid-tWRKPGqBLD .modal-body img {
+.cid-tWROCVahyu .modal-body img {
   width: 100%;
   object-fit: contain;
   max-height: calc(100vh - 1.75rem);
 }
-.cid-tWRKPGqBLD .carousel {
+.cid-tWROCVahyu .carousel {
   width: 100%;
 }
-.cid-tWRKPGqBLD .modal-backdrop.in {
+.cid-tWROCVahyu .modal-backdrop.in {
   opacity: 0.8;
 }
-.cid-tWRKPGqBLD .modal.fade .modal-dialog {
+.cid-tWROCVahyu .modal.fade .modal-dialog {
   -webkit-transition: margin-top 0.3s ease-out;
   -moz-transition: margin-top 0.3s ease-out;
   -o-transition: margin-top 0.3s ease-out;
   transition: margin-top 0.3s ease-out;
 }
-.cid-tWRKPGqBLD .modal.fade .modal-dialog,
-.cid-tWRKPGqBLD .modal.in .modal-dialog {
+.cid-tWROCVahyu .modal.fade .modal-dialog,
+.cid-tWROCVahyu .modal.in .modal-dialog {
   -webkit-transform: none;
   -ms-transform: none;
   -o-transform: none;
   transform: none;
 }
-.cid-tWRKPGqBLD .mbr-gallery .item-wrapper {
+.cid-tWROCVahyu .mbr-gallery .item-wrapper {
   cursor: pointer;
 }
-.cid-tWRKPGqBLD a {
+.cid-tWROCVahyu a {
   display: block;
 }
-.cid-tWRKPGqBLD a.img {
+.cid-tWROCVahyu a.img {
   pointer-events: none;
 }
-.cid-tWRKPH5sfn {
+.cid-tWRODmX7b4 {
   padding-top: 45px;
   padding-bottom: 45px;
   background-color: #ffffff;
 }
 @media (max-width: 767px) {
-  .cid-tWRKPH5sfn .media-wrap {
+  .cid-tWRODmX7b4 .media-wrap {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-tWRKPH5sfn .media-wrap .mbr-iconfont-logo {
+.cid-tWRODmX7b4 .media-wrap .mbr-iconfont-logo {
   font-size: 7rem;
   color: #f36;
 }
-.cid-tWRKPH5sfn .media-wrap img {
+.cid-tWRODmX7b4 .media-wrap img {
   height: 6rem;
 }
-.cid-tWRKPH5sfn .mbr-text {
+.cid-tWRODmX7b4 .mbr-text {
   color: #767676;
 }
 @media (max-width: 767px) {
-  .cid-tWRKPH5sfn .footer-lower .copyright {
+  .cid-tWRODmX7b4 .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-tWRKPH5sfn .footer-lower hr {
+.cid-tWRODmX7b4 .footer-lower hr {
   margin: 1rem 0;
   border-color: #000;
   opacity: .05;
 }
-.cid-tWRKPH5sfn .footer-lower .social-list {
+.cid-tWRODmX7b4 .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -1758,24 +1358,24 @@ section.lazy-placeholder:after {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-tWRKPH5sfn .footer-lower .social-list .mbr-iconfont-social {
+.cid-tWRODmX7b4 .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #232323;
 }
-.cid-tWRKPH5sfn .footer-lower .social-list .soc-item {
+.cid-tWRODmX7b4 .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-tWRKPH5sfn .footer-lower .social-list a {
+.cid-tWRODmX7b4 .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-tWRKPH5sfn .footer-lower .social-list a:hover {
+.cid-tWRODmX7b4 .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-tWRKPH5sfn .footer-lower .social-list {
+  .cid-tWRODmX7b4 .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
